[package]
name = "august"
description = "A crate & program for converting HTML to plain text."
version = "0.1.1"
license = "LGPL-3.0-or-later"
homepage = "https://gitlab.com/alantrick/august-rust/"
authors = ["Alan Trick <me@alantrick.ca>"]
repository = "https://gitlab.com/alantrick/august-rust/"
keywords = ["text", "html", "converter"]
categories = ["text-processing"]
edition = '2018'
readme = "README.md"


[dependencies]
html5ever = "^0"
num-rational = "^0"
num-traits = "^0"
itertools = "^0"
lazy_static = "~1"
hyphenation = "^0"
textwrap = { version = "^0" }
regex = "~1"
unicode-segmentation = "~1"
argparse = "^0"