[package]
name = "august"
description = "A crate & program for converting HTML to plain text."
version = "2.3.0"
license = "LGPL-3.0-or-later"
homepage = "https://gitlab.com/alantrick/august/"
authors = ["Alan Trick <me@alantrick.ca>"]
repository = "https://gitlab.com/alantrick/august/"
keywords = ["text", "html", "converter"]
categories = ["text-processing"]
edition = '2018'
readme = "README.md"

[dependencies]
# note: latest version is 0.25, but we should drop
# our use of rcdom before we update to that
html5ever = "0.24.1"
num-rational = "0.2.2"
num-traits = "0.2.8"
itertools = "0.8.1"
lazy_static = "1.4.0"
textwrap = "0.11.0"
regex = "1.3.1"
unicode-segmentation = "1.3.0"
argparse = "0.2.2"
term_size = { version = "0.3.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"

[badges]
gitlab = { repository = "alantrick/august" }

[features]
default = []
term-size = ["term_size"] # feature has no explicit dependencies
